Fixing issues in table alignment

--- a/admin_ui/style/css/theme-default.css
+++ b/admin_ui/style/css/theme-default.css
@@ -6526,6 +6526,7 @@ button:hover {
   font-size: 14px;
   margin-top: 30px;
   text-align: center;
+  margin-bottom: 5px;
 }
 .dataTables_paginate a{ 
   border: 1px solid #25bce9;
@@ -6585,7 +6586,7 @@ button:hover {
 }
 .data-table .table_action {
   padding: 10px 5px 10px 0px !important;
-  width : 51px !important;
+  width : 7% !important;
 }
 .user_table td, .user_table th {
   padding: 10px 10px !important;
@@ -6604,4 +6605,7 @@ button:hover {
   color: #fff;
   font-family: inherit;
   font-size: 14px;
+}
+.dataTables_wrapper {
+  overflow-x: auto;
 }
